vbnc/vbnc/vbnc/tests/Errors/32007-2.vb
Class T
    Const M_Char_Char As Char = 12L
End Class